# COP6640-Final-Project

./: .env  LICENSE  README.md
prompts/: prompts.csv
source/: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
source/judge/: prompt.txt
source/src/syco/: __init__.py  analyze.py  cli.py  config.py  generate.py  human_eval.py  io_utils.py  judge.py  kappa.py  logging_utils.py  openrouter.py  prompts.py  sample.py  schemas.py
source/tests/: test_judge_parse.py  test_kappa.py  test_sample.py  test_schemas.py
